# librefuzzer

./: .gitignore  CFG_builder.py  Cargo.toml  README.md  function_def_scraper.py  grammar_builder.py  grammar_extractor.py
cfg_pipeline/: CFG_builder.py  function_def_scraper.py  grammar_extractor.py  run.sh
cfg_pipeline/downsized_progress/: fifth_amalgamation.json  first_amalgamation.json  fourth_amalgamation.json  second_amalgamation.json  third_amalgamation.json
preprocess/: README.md  gnf_converter.py
preprocess/construct_automata/: Cargo.toml  construct_automata
src/: Makefile  cli.rs  fuzz.rs  harn2.cpp  harness.cpp  main.rs
