[package]
name = "librefuzzer"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
libafl = { path = "/home/tbird/tools/LibAFL/crates/libafl" }
libafl_bolts = { path = "/home/tbird/tools/LibAFL/crates/libafl_bolts" }
libafl_targets = { path = "/home/tbird/tools/LibAFL/crates/libafl_targets" }
log = {  version = "0.4.28", features = ["release_max_level_info"]}
postcard = { version = "1.1.3", features = ["alloc"], default-features = false }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 3
debug = true
