[package]
name = "construct_automata"
version = "0.16.0"
edition = "2024"
authors = [
  "Andrea Fioraldi <andreafioraldi@gmail.com>",
  "Dominik Maier <domenukk@gmail.com>",
]
description = "LibAFL Gramatron Gramar Construction"
documentation = "https://docs.rs/libafl"
repository = "https://github.com/AFLplusplus/LibAFL/"
readme = "../../README.md"
license = "MIT OR Apache-2.0"
keywords = ["fuzzing", "libafl", "gramatron", "grammar"]
categories = [
  "development-tools::testing",
  "emulators",
  "embedded",
  "os",
  "no-std",
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libafl = { path = "/home/tbird/tools/LibAFL/crates/libafl" }
serde_json = { version = "1.0.145", default-features = true }
regex = { version = "1.12.2" }
postcard = { version = "1.1.3", features = [
  "alloc",
], default-features = false } # no_std compatible serde serialization format
clap = { version = "4.5.49", features = ["derive"] }
